# share-files-client

./: Cargo.toml  README.md  index.html  styles.css
src/: app.rs  main.rs  settings.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
