[package]
name = "share-files-client-ui"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.5.1", features = ["csr"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde-wasm-bindgen = "0.6.0"
wasm-bindgen = { version = "0.2.87", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.37"
js-sys = "0.3.64"
web-sys = { version = "0.3.64", features = [
    "Window",
    "Storage",
    "Document",
    "Event",
] }
stylers = { git = "https://github.com/abishekatp/stylers", package = "stylers", branch = "stylers_build1", version = "1.0.0-alpha" }

[build-dependencies]
stylers = { git = "https://github.com/abishekatp/stylers", package = "stylers", branch = "stylers_build1", version = "1.0.0-alpha" }

[workspace]
members = ["src-tauri"]
