[package]
name = "share-files-client"
version = "1.0.0"
description = "Share Files client"
authors = ["Carlos Checa"]
license = "MIT"
repository = "https://github.com/Carl0sCheca/share-files-client"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
futures-util = "0.3.28"
pollster = "0.3.0"
reqwest = { version = "0.11.22", features = ["json", "stream"] }
read-progress-stream = "1.0.0"
tauri = { version = "1.5.2", features = [
    "window-set-focus",
    "notification-all",
    "system-tray",
    "shell-open",
] }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tokio = { version = "1.33.0", features = ["full"] }
tokio-stream = "0.1.14"
tokio-util = { version = "0.7.9", features = ["codec"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
